<resources>
    <string name="app_name">Solver</string>

    <string name="displyHint"></string>
    <string name="solve">Simplifica</string>

    <string name="variable">𝑥</string>
    <string name="varSquare">𝑥<sup><small>2</small></sup></string>
    <string name="var">x</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">÷</string>
    <string name="multiplyText">×</string>
    <string name="multplyDotText">⋅</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunctionText">prime</string>

    <string name="backspace"> </string>
    <string name="title_activity_navbar">navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="chose_equation">Choose equation type</string>
    <string-array name="types_equation">
        <item>Gradul intai</item>
        <item>Gradul al doilea</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_generate">GenerateActivity</string>
    <string name="title_activity_show_feedback">ShowFeedback</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>