<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/draw"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">


    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/displyHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/greyAccent"
        android:textSize="49sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/clear_button_background"
            android:contentDescription="@string/backspace"
            android:onClick="backspaceBTN"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="@+id/button20"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:background="@drawable/clear_button_background"
            android:onClick="clearBTNPush"
            android:text="@string/clearText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTNPush"
            android:text="@string/zeroText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_button_background"
            android:onClick="equalBTNPush"
            android:text="@string/equalsText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button38"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/aritmatic_button_background"
            android:onClick="addBTNPush"
            android:text="@string/addText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button41"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTNPush"
            android:text="@string/threeText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="twoBTNPush"
            android:text="@string/twoText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTNPush"
            android:text="@string/oneText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/aritmatic_button_background"
            android:onClick="subtractBTNPush"
            android:text="@string/subtractText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTNPush"
            android:text="@string/sixText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTNPush"
            android:text="@string/fiveText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTNPush"
            android:text="@string/fourText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/aritmatic_button_background"
            android:onClick="multiplyBTNPush"
            android:text="@string/multiplyText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTNPush"
            android:text="@string/nineText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTNPush"
            android:text="@string/eightText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTNPush"
            android:text="@string/sevenText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/aritmatic_button_background"
            android:onClick="divideBTNPush"
            android:text="@string/divideText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:onClick="parCloseBTNPush"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:onClick="parOpenBTNPush"
            android:text="@string/parenthesesOpenText"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button22"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="variableBTNPush"
            android:text="@string/variable"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button41"
            android:layout_width="80dp"
            android:layout_height="70dp"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="variableSquareBTNPush"
            android:text="@string/varSquare"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button38"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/equals_button_background"
            android:onClick="solveBtnPush"
            android:text="@string/solve"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/button41"
            app:layout_constraintStart_toStartOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/button37"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/clear_button_background"
        android:onClick="sidebarBtnPush"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_select" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/sidebar_background"
        app:itemTextColor="@color/textColor"
        app:menu="@menu/sidebar" />
</androidx.drawerlayout.widget.DrawerLayout>

